Uncomment inputs stylesheet and bump gem version

--- a/app/assets/stylesheets/uswds/uswds.scss
+++ b/app/assets/stylesheets/uswds/uswds.scss
@@ -24,7 +24,7 @@ $asset-pipeline: true;
 @import 'uswds/elements/buttons';
 @import 'uswds/elements/embed';
 @import 'uswds/elements/figure';
-// @import 'uswds/elements/inputs';
+@import 'uswds/elements/inputs';
 @import 'uswds/elements/labels';
 @import 'uswds/elements/list';
 @import 'uswds/elements/table';
