Update files to use Rails asset-url helper

--- a/app/assets/stylesheets/uswds/elements/_inputs.scss
+++ b/app/assets/stylesheets/uswds/elements/_inputs.scss
@@ -112,8 +112,8 @@ select {
   -webkit-appearance: none;
   appearance: none;
   background-color: $color-white;
-  background-image: asset-url('#{$image-path}/arrow-both.png');
-  background-image: asset-url('#{$image-path}/arrow-both.svg');
+  background-image: url('#{$image-path}/arrow-both.png');
+  background-image: url('#{$image-path}/arrow-both.svg');
   background-position: right 1.3rem center;
   background-repeat: no-repeat;
   background-size: 1.3rem;
@@ -202,8 +202,8 @@ legend {
 
 [type=checkbox]:checked + label::before,
 [type=checkbox]:checked:disabled + label::before {
-  background-image: asset-url('#{$image-path}/correct8.png');
-  background-image: asset-url('#{$image-path}/correct8.svg');
+  background-image: url('#{$image-path}/correct8.png');
+  background-image: url('#{$image-path}/correct8.svg');
   background-position: 50%;
   background-repeat: no-repeat;
 }
