--- a/app/assets/stylesheets/uswds/core/_utilities.scss
+++ b/app/assets/stylesheets/uswds/core/_utilities.scss
@@ -141,8 +141,8 @@
 
 @mixin display-icon($icon, $direction, $size, $margin, $hover) {
   &::#{$direction} {
-    background-image: asset-url('#{$image-path}/#{$icon}.png');
-    background-image: asset-url('#{$image-path}/#{$icon}.svg');
+    background-image: url('#{$image-path}/#{$icon}.png');
+    background-image: url('#{$image-path}/#{$icon}.svg');
     background-size: 100%;
     content: '';
     display: inline-block;
@@ -160,8 +160,8 @@
 
   @if $hover == 'hover' {
     &:hover::#{$direction} {
-      background-image: asset-url('#{$image-path}/#{$icon}-hover.png');
-      background-image: asset-url('#{$image-path}/#{$icon}-hover.svg');
+      background-image: url('#{$image-path}/#{$icon}-hover.png');
+      background-image: url('#{$image-path}/#{$icon}-hover.svg');
     }
   }
 }
@@ -189,6 +189,7 @@
     text-decoration: none;
 
     &:hover {
+      background-color: $color-gray-lightest;
       color: $color-primary;
       text-decoration: none;
     }
