--- a/app/assets/stylesheets/uswds/elements/_typography.scss
+++ b/app/assets/stylesheets/uswds/elements/_typography.scss
@@ -29,8 +29,8 @@ a {
 
 @mixin external-link($external-link, $external-link-hover) {
   &::after {
-    background: asset-url('#{$image-path}/#{$external-link}.png') no-repeat 0 0;
-    background: asset-url('#{$image-path}/#{$external-link}.svg') no-repeat 0 0;
+    background: url('#{$image-path}/#{$external-link}.png') no-repeat 0 0;
+    background: url('#{$image-path}/#{$external-link}.svg') no-repeat 0 0;
     background-size: 100%;
     content: '';
     display: inline-block;
@@ -41,8 +41,8 @@ a {
   }
 
   &:hover::after {
-    background-image: asset-url('#{$image-path}/#{$external-link-hover}.png');
-    background-image: asset-url('#{$image-path}/#{$external-link-hover}.svg');
+    background-image: url('#{$image-path}/#{$external-link-hover}.png');
+    background-image: url('#{$image-path}/#{$external-link-hover}.svg');
   }
 }
 
