--- a/app/assets/stylesheets/uswds/core/_utilities.scss
+++ b/app/assets/stylesheets/uswds/core/_utilities.scss
@@ -36,6 +36,12 @@
   text-transform: uppercase;
 }
 
+// Focus state mixin
+@mixin focus {
+  outline: $focus-outline;
+  outline-offset: $focus-spacing;
+}
+
 // Mobile-first media query helper
 @mixin media($bp) {
   @media screen and (min-width: #{$bp}) {
@@ -141,8 +147,8 @@
 
 @mixin display-icon($icon, $direction, $size, $margin, $hover) {
   &::#{$direction} {
-    background-image: url('#{$image-path}/#{$icon}.png');
-    background-image: url('#{$image-path}/#{$icon}.svg');
+    background-image: asset-url('#{$image-path}/#{$icon}.png');
+    background-image: asset-url('#{$image-path}/#{$icon}.svg');
     background-size: 100%;
     content: '';
     display: inline-block;
@@ -160,8 +166,8 @@
 
   @if $hover == 'hover' {
     &:hover::#{$direction} {
-      background-image: url('#{$image-path}/#{$icon}-hover.png');
-      background-image: url('#{$image-path}/#{$icon}-hover.svg');
+      background-image: asset-url('#{$image-path}/#{$icon}-hover.png');
+      background-image: asset-url('#{$image-path}/#{$icon}-hover.svg');
     }
   }
 }
